src/objects/AccountTeamMemberToAccountMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Holds the mapping between Account Team Members and Account based on the members TeamRole.</description>
    <fields>
        <fullName>Account_Team_Member_Role__c</fullName>
        <description>the Role of the Account team member</description>
        <label>Account Team Member Role</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationField__c</fullName>
        <description>Contains the Field that the data should be copied too, must be a valid field on the Account object.</description>
        <label>DestinationField</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <description>The Field on AccountTeamMember where the data should be copied from, use default . notation to access relationships</description>
        <label>SourceField</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AccountTeamMemberToAccountMapping</label>
</CustomObject>